--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "autoprefixer": "^10.4.18",
     "date-fns": "^3.3.1",
     "firebase": "^10.14.1",
+    "papaparse": "^5.4.1",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
