--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/use-infinite-scroll": "^2.1.5",
+    "@react-stately/data": "^3.12.0",
     "autoprefixer": "^10.4.18",
     "date-fns": "^3.3.1",
     "firebase": "^10.14.1",
+    "framer-motion": "^11.13.1",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
