--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/use-infinite-scroll": "^2.1.5",
